# bandit-stack

./: .gitignore  LICENSE  README.md  compose.postgres.yml  pyproject.toml
.github/workflows/: ci.yml
apps/reports/: e2e_demo.py  m3_e2e.py  m4_e2e.py  m5_e2e.py  m6_dogfood.py  mock_upstream.py  regret_report.py
configs/: llm_proxy.example.json
docs/: 2026-07-09-architecture-design.md  m2-e2e-verification.txt  m3-e2e-verification.txt  m4-quality-per-dollar-report.txt  m5-e2e-verification.txt  m6-dogfood-gpt55-report.txt  m6-dogfood-report.txt
docs/superpowers/plans/: 2026-07-09-m5-offline-pilot-hardening.md
docs/superpowers/specs/: 2026-07-09-m5-offline-pilot-hardening-design.md
research/: 2026-07-09-market-research-what-to-commoditize.md
services/decision_api/: pyproject.toml
services/decision_api/src/decision_api/: app.py  db.py  main.py  policies.py  schemas.py  security.py
services/decision_api/tests/: test_api.py  test_db.py  test_decision_security.py  test_postgres.py
services/llm_proxy/: pyproject.toml
services/llm_proxy/src/llm_proxy/: app.py  config.py  db.py  main.py  onboard.py  pricing.py  provisioning.py  rate_limit.py  security.py  shadow.py
services/llm_proxy/tests/: conftest.py  test_onboard.py  test_provisioning.py  test_proxy.py  test_proxy_db.py  test_proxy_m4.py  test_proxy_retention.py  test_proxy_security.py  test_rate_limit.py  test_reward_claim.py  test_shadow.py
