[project]
name = "rl-pipeline"
version = "0.1.0"
description = "Contextual bandit decision engine + LLM quality-per-dollar optimizer"
requires-python = ">=3.12"
dependencies = [
    "bandit-core",
    "decision-api",
    "evals",
    "llm-proxy",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "matplotlib>=3.9",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.uv.sources]
bandit-core = { workspace = true }
decision-api = { workspace = true }
evals = { workspace = true }
llm-proxy = { workspace = true }

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[tool.pytest.ini_options]
testpaths = [
    "packages/bandit_core/tests",
    "packages/evals/tests",
    "services/decision_api/tests",
    "services/llm_proxy/tests",
]
addopts = "-q"
