[project]
name = "decision-api"
version = "0.1.0"
description = "HTTP decision service: /decide + /reward over a persistent, propensity-logged decision store, with off-policy evaluation"
requires-python = ">=3.12"
dependencies = [
    "bandit-core",
    "fastapi>=0.115",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "uvicorn>=0.30",
]

[tool.uv.sources]
bandit-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/decision_api"]
