[project]
name = "llm-proxy"
version = "0.1.0"
description = "OpenAI-compatible LLM proxy: shadow-mode bandit routing, streaming pass-through, cost tracking, fail-open"
requires-python = ">=3.12"
dependencies = [
    "evals",
    "fastapi>=0.115",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "uvicorn>=0.30",
]

[tool.uv.sources]
evals = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_proxy"]
